--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,41 @@
 /* You can add global styles to this file, and also import other style files */
+/* 
+* Colors
+- Dark Blue (Dark Mode Elements): hsl(209, 23%, 22%) -> #2b3945
+- Very Dark Blue (Dark Mode Background): hsl(207, 26%, 17%) -> #202c37
+- Very Dark Blue (Light Mode Text): hsl(200, 15%, 8%) -> #111517
+- Dark Gray (Light Mode Input): hsl(0, 0%, 52%) -> #858585
+- Very Light Gray (Light Mode Background): hsl(0, 0%, 98%) -> #fafafa
+- White (Dark Mode Text & Light Mode Elements): hsl(0, 0%, 100%) -> #ffffff
+ */
+
+/* 
+ * Body Copy
+- Homepage Items: 14px
+- Detail Page: 16px 
+*/
+
+/* 
+*Fonts
+- Family: [Nunito Sans](https://fonts.google.com/specimen/Nunito+Sans)
+- Weights: 300, 600, 800
+ */
+
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
+}
+
+html {
+  /* 10px / 16px = 0.625 = 62.5% */
+  /* Percentage of user's browser font-size setting */
+  font-size: 62.5%;
+  overflow-x: hidden;
+}
+
+body {
+  font-family: "Nunito Sans", sans-serif;
+  line-height: 1;
+  font-weight: 500;
+}
